[package]
name = "ARP_Puker"
description = "An ARP-based MITM Attacker written in Rust"
version = "0.0.1"
edition = "2021"
author = "{Hack}rogrammer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
local-ip-address = "0.5.1"
netscan = "0.13.0"
regex = "1.7.3"
