[package]
name = "ARP_Puker"
description = "An ARP-based MITM Attacker written in Rust"
version = "0.0.1"
edition = "2021"
author = "{Hack}rogrammer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
ctrlc = "3.2.5"
if-addrs = "0.10.1"
ipnet = "2.7.2"
local-ip-address = "0.5.1"
netscan = "0.13.0"
pnet = "0.33.0"
regex = "1.7.3"
